layout11 full-bleed layout with fixed-width

--- a/layout11-full-bleed layout with fixed-width content/style.css
+++ b/layout11-full-bleed layout with fixed-width content/style.css
@@ -89,6 +89,13 @@ img {
   background-image: linear-gradient(45deg, #FBDA61 0%, #FF5ACD 100%); 
 }
 
+.footer {
+	padding: 2em;
+	background: #1A1A1A;
+	color: #fff;
+	text-align: center;
+}
+
 @media screen and (min-width: 600px) {
 	.grid {
 		display: grid;
@@ -118,6 +125,10 @@ img {
 	}
 
 	.twin {
+		grid-column: span 2;
+	}
+
+	.footer aside {
 		grid-column: span 2;
 	}
 
